<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Localchat</string>

    // Tabs
    <string name="action_settings">Setting</string>
    <string name="action_chat">Chat</string>
    <string name="action_profile">Profile</string>
    <string name="action_map">Map</string>
    <string name="action_global_chat">Room</string>

    <string name="title_activity_chat_view">Chat with </string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No new devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_chatrooms">Chatrooms</string>
    <string name="chatroom_name">Global</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_givenname">Name:</string>
    <string name="profile_nickname">Nickname:</string>
    <string name="profile_surname">Last Name:</string>
    <string name="profile_description">Description:</string>
    <string name="profile_age">Age</string>

    <!-- Setting -->
    <string name="show_profile">Show Profile</string>
    <string name="show_profile_description">It allows others to see your profile</string>


    <string name="send_photo_from_gallery">Send photo</string>
    <string name="send_photo_from_camara">Take photo</string>
    <string name="watch_profile">Watch Profile</string>
    <string name="profile_not_found">Profile currently unavailable</string>

    <string name="speak_now_message">Speak now</string>
    <string name="record_end_message">Record complete</string>


</resources>
